--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<iframe src="bing.com" height="500px" width="500px"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>title</title>
+</head>
+<body>
+test
+</body>
+</html>
